@@ -232,6 +232,7 @@ plugins/plugins-available/reports/README.txt
 plugins/plugins-available/reports/root/reports.css
 plugins/plugins-available/reports/root/reports.js
 plugins/plugins-available/reports/t/controller_reports.t
+plugins/plugins-available/reports/templates/_report_send_types.tt
 plugins/plugins-available/reports/templates/passthrough_pdf.tt
 plugins/plugins-available/reports/templates/pdf/defaults/mail.tt
 plugins/plugins-available/reports/templates/pdf/defaults/prepare.tt
