@@ -9779,6 +9779,23 @@ within 40seconds which is the default fcgi timeout.</p></div>
 <div class="content">
 <pre><tt>no_external_job_forks = 1</tt></pre>
 </div></div>
+<h4 id="_cron_file">cron_file</h4>
+<div class="paragraph"><p>Specifiy a file which is then completly under the control of Thruk.
+It will be used to store cronjobs, ex. for reports. The file has to be
+writable by Thruk.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>cron_file = /etc/cron.d/thruk</tt></pre>
+</div></div>
+<h4 id="_cron_post_edit_cmd">cron_post_edit_cmd</h4>
+<div class="paragraph"><p>The post edit cmd is necessary for OMD where you need to reload the
+crontab after editing.</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>cron_post_edit_cmd = omd reload crontab</tt></pre>
+</div></div>
 <h4 id="_enable_shinken_features">enable_shinken_features</h4>
 <div class="paragraph"><p>This one activates all problem/impact and criticity features.
 Currently it will only work with shinken backends. Dont enable it
@@ -10552,7 +10569,7 @@ cronjob running the thruk command line tool:</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-05-07 17:29:53 CEST
+Last updated 2012-05-21 23:34:15 CEST
 </div>
 </div>
 </body>
