@@ -1,0 +1,71 @@
+﻿<tr id="send_pane_[% nr %]"[% IF nr == 0 %] style="display:none"[% END %]>
+  <td>
+  <select name="send_type_[% nr %]" id="send_type_[% nr %]" onchange="reports_change_date(this.id)">
+      <option value="month"[% IF st.type == 'month' %] selected[% END %]>monthly</option>
+      <option value="week"[% IF st.type == 'week' %] selected[% END %]>weekly</option>
+      <option value="day"[% IF st.type == 'day' %] selected[% END %]>daily</option>
+  </select>
+  </td>
+  <td>
+  <div id="div_send_month_[% nr %]">
+      on day
+      <select name="send_day_[% nr %]">
+          [% day = 1 %]
+          [% WHILE day <= 31 %]
+          <option value="[% day %]"[% IF st.day == day %] selected[% END %]>[% sprintf("%02s", day) %]</option>
+          [% day = day + 1 %]
+          [% END %]
+      </select>
+  </div>
+  <div id="div_send_week_[% nr %]" style="display: none">
+      [% lookup = {} %]
+      [% FOREACH w = st.week_day.split(',') %][% lookup.$w = 1 %][% END %]
+      <input type="hidden" name="week_day_[% nr %]" value="">
+      <table class="weekly_days">
+      <tr>
+        <td rowspan=2 valign="middle">on</td>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thu</td>
+        <td>Fri</td>
+        <td>Sat</td>
+        <td>Sun</td>
+      </tr><tr>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="1"[% IF lookup.exists('1') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="2"[% IF lookup.exists('2') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="3"[% IF lookup.exists('3') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="4"[% IF lookup.exists('4') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="5"[% IF lookup.exists('5') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="6"[% IF lookup.exists('6') %] checked[% END %]></td>
+        <td><input type="checkbox" name="week_day_[% nr %]" value="0"[% IF lookup.exists('0') %] checked[% END %]></td>
+      </tr>
+      </table>
+  </div>
+  <div id="div_send_day_[% nr %]" style="display: none">
+  </div>
+  </td>
+  <td>
+  at
+  <select name="send_hour_[% nr %]">
+      [% hour = 0 %]
+      [% WHILE hour < 24 %]
+      <option value="[% hour %]"[% IF st.hour == hour %] selected[% END %]>[% sprintf("%02s", hour) %]</option>
+      [% hour = hour + 1 %]
+      [% END %]
+  </select>:<select name="send_minute_[% nr %]">
+      [% min = 0 %]
+      [% WHILE min < 60 %]
+      <option value="[% min %]"[% IF st.minute == min %] selected[% END %]>[% sprintf("%02s", min) %]</option>
+      [% min = min + 1 %]
+      [% END %]
+  </select>
+  </td>
+  <td class='newfilter' onclick="delete_report_send_row(this); return false;"><input type="image" src="[% url_prefix %]thruk/themes/[% theme %]/images/remove.png" name="delete">
+  <script type="text/javascript">
+  <!--
+  reports_change_date("send_type_[% nr %]");
+  -->
+  </script>
+  </td>
+</tr>
