@@ -63,6 +63,25 @@
     <td class="dataOdd" align="left" colspan=2><input type="text" name="cc" value="[% r.cc %]"></td>
   </tr>
   <tr>
+    <td class="dataEven" align="center" valign="top"><b>Send Report</b></td>
+    <td class="dataOdd" align="left" colspan=2>
+        <table id="report_sends">
+          [% st = { type => 'month', day => 1, week_day => '', hour => 0, minute => 0 } %]
+          [% PROCESS _report_send_types.tt nr = 0 %]
+          [% FOREACH st = r.send_types %]
+              [% nr = loop.index + 1 %]
+              [% PROCESS _report_send_types.tt %]
+          [% END %]
+          <tr>
+            <td colspan=3 class='newfilter' onclick="add_report_send_row(this); return false;" nowrap>
+                <input type="image" src="[% url_prefix %]thruk/themes/[% theme %]/images/down.png" name="add">
+                add more
+            </td>
+          </tr>
+        </table>
+    </td>
+  </tr>
+  <tr>
     <td class="dataEven" align="center" colspan=3><b>Choose Report:</b></td>
   </tr>
   <tr>
