@@ -337,6 +337,17 @@ statusmap_default_groupby = address
 #enable_icinga_features = 0
 
 #####################################
+# cron settings
+# Specifiy a file which is then completly under the control of Thruk.
+# It will be used to store cronjobs, ex. for reports. The file has to
+# be writable by Thruk.
+#cron_file =
+
+# The post edit cmd is necessary for OMD where you need to reload the
+# crontab after editing.
+#cron_post_edit_cmd =
+
+#####################################
 # Waiting is a livestatus feature. When enabled, Thruk will wait
 # after rescheduling hosts/services checks until the
 # check has been really executed up to a maximum of 20 seconds.
